styles/style.css
/* ... */
/* style 2nd component - mobile */
.screen-mockups-component {
  width: 90%;
  justify-self: center;
}

/* style 3rd component - mobile */
.stats-component {
  display: flex;
  flex-direction: column;
  gap: 6rem;
  align-items: center;
}

.stats-component__communities-count,
.stats-component__messages-count {
  display: flex;
  flex-direction: column;
  gap: 1.4rem;
}

.stats-component__communities-count > img,
.stats-component__messages-count > img {
  width: 18%;
}

.stats-component__communities-count > h2 {
  font-size: 6rem;
  font-family: var(--ff-headings);
  font-weight: var(--fw-600);
}

.stats-component__communities-count > p,
.stats-component__messages-count > p {
  font-size: 1.6rem;
  font-family: var(--ff-body);
  font-weight: var(--fw-400);
  text-align: center;
}

.stats-component__messages-count > h2 {
  font-size: 6rem;
  font-family: var(--ff-headings);
  font-weight: --fw-600;
}

/* style 4th component - mobile */
/* style 5th component - mobile */
/* style 6th component - mobile */
.grow-together-component,
.your-users-component {
  display: flex;
  flex-direction: column;
}

.grow-together-component__main,
.your-users-component__main {
  background-color: var(--clr-neutral-very-pale-blue);

  display: flex;
  flex-direction: column;
  gap: 8rem;
  align-items: center;

  padding: 8rem 0 6rem 0;
}

.conversations-component {
  display: flex;
  flex-direction: column;
  gap: 8rem;
  align-items: center;
}

.your-users-component__main {
  padding: 4rem 0 6rem 0;
}

.grow-together-component__main-info,
.your-users-component__main-info {
  display: flex;
  flex-direction: column;
  gap: 2rem;
  align-items: center;
}

.conversations-component > section {
  display: flex;
  flex-direction: column;
  gap: 2rem;
  align-items: center;
}

.grow-together-component__main-img,
.your-users-component__main-img {
  width: 80%;
}

.conversations-component > figure {
  width: 80%;
}

.grow-together-component__main > section > h2,
.your-users-component__main > section > h2,
.conversations-component > section > h2 {
  font-size: 2.5rem;
  font-family: var(--ff-headings);
  font-weight: var(--fw-700);
}

.grow-together-component__main > section > p,
.your-users-component__main > section > p,
.conversations-component > section > p {
  width: 92%;
  line-height: 1.45;
  text-align: center;

  font-family: var(--ff-body);
  font-weight: var(--fw-400);
  font-size: 1.5rem;
}

/* style 7th component - mobile */
.build-community-component {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 5rem;
}

.build-community-component > h2 {
  font-size: 2.8rem;
  font-weight: bold;

  line-height: 1.4;

  text-align: center;
}

.build-community-component > button {
  border: none;
  border-radius: 3rem;

  padding: 1rem 2.8rem;

  background-color: var(--clr-primary-pink);
  color: white;

  font-family: var(--ff-body);
  font-weight: var(--fw-600);

  box-shadow: 0px 5px 10px 0px var(--clr-primary-light-pink);
}

/* style 8th component - mobile */
.footer-component {
  /* position background color - https://stackoverflow.com/questions/8558502/background-position-for-background-color*/
  background: linear-gradient(to top, hsl(192, 100%, 9%), hsl(192, 100%, 9%))
    no-repeat 0px 5.3rem;
  color: white;

  display: grid;
  grid-template-columns: 1fr;
  grid-template-areas:
    "footer-component__footer-top-img"
    "footer-component__newsletter-section"
    "footer-component__company-info-section"
    "contact-us-section"
    "footer-component__social-section";
  gap: 4rem;
}

.footer-component__footer-top-img > img {
  width: 100%;
}

.footer-component__newsletter-section {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;

  padding: 2rem 3rem 2rem 4rem;
}

.footer-component__newsletter-section-header {
  font-size: 2.6rem;
  font-family: var(--ff-headings);
  font-weight: var(--fw-700);

  padding-bottom: 2rem;

  text-transform: uppercase;
}

.footer-component__newsletter-section-info {
  font-family: var(--ff-body);
  font-weight: var(--fw-400);

  padding-bottom: 2rem;

  font-size: 1.4rem;
}

.footer-component__newsletter-section > input {
  height: 4.2rem;
  border-radius: 1rem;
}

.footer-component__newsletter-section-button {
  border: none;
  border-radius: 0.6rem;

  height: 4.2rem;
  width: 50%;

  align-self: end;

  background-color: var(--clr-primary-pink);
  color: white;

  font-family: var(--ff-body);
  font-size: 1.2rem;
  font-weight: var(--fw-600);
}

.footer-component__newsletter-section > label {
  display: none;
}

.footer-component__company-info-section,
.contact-us-section {
  display: flex;
  flex-direction: column;
  gap: 2rem;

  padding: 0 4rem;
}

/* change SVG color */
/* https://stackoverflow.com/questions/22252472/how-to-change-the-color-of-an-svg-element/53336754#53336754 */
/* https://www.w3schools.com/colors/colors_picker.asp */
.footer-component__company-info-section > figure > img {
  filter: invert(99%) sepia(14%) saturate(0%) hue-rotate(89deg) brightness(102%)
    contrast(100%);
}

.contact-us-section__phone,
.contact-us__email {
  display: flex;
  flex-direction: row;
  gap: 2rem;
  align-items: center;
}

.contact-us-section__phone > figure,
.contact-us__email > figure {
  width: 8%;
  height: 77%;
}

.footer-component__social-section {
  display: flex;
  flex-direction: row;
  gap: 2rem;

  padding: 0 4rem 4rem 4rem;
}

.footer-component__social-section > i {
  font-size: 3rem;
}
/* ... */

